src/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
}

.main-wrapper {
    min-height: 875px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.player-ships {
    display: flex;
    gap: 20px;
    margin-bottom: 20px;
    padding-left: 282px;
}

.place-ship {
    height: 40px;
    width: 100px;
    background-color: rgb(164, 206, 255);
}

.ship-direction {
    width: 80px;
}

.ship-selected {
    background-color: rgb(95, 170, 255);
    box-shadow: 0 0 5px rgb(61, 61, 61) inset;
}

.placed {
    background-color: rgb(65, 228, 65);
}

.boards {
    display: flex;
    justify-content: center;
    gap: 200px;
}

.gameboard {
    border: 1px solid black;
}

td {
    height: 50px;
    width: 50px;
    border: 1px solid black;
}

.unclickable {
    pointer-events: none;
}

.hidden {
    display: none;
}

.placement-preview {
    background-color: rgb(120, 120, 245);
}

.adjacent-square {
    background-color: #e7e7e7;
}

.illegal-placement {
    background-color: rgb(247, 78, 78);
}

.placed-ship {
    background-color: rgb(41, 41, 209);
}

.attacked {
    background-color: red;
}

